# NAOCMAKEBROKER

./: CMakeLists.txt  alspeechbasedreaction.cpp  alspeechbasedreaction.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nao.mcd  nao.sql  path.conf  qiproject.xml  speechrecognition.cpp  speechrecognition.h
build-myconfig/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  NAO.vcxproj  NAO.vcxproj.filters  NaoCmakeBroker.sln  NaoCmakeBroker.vcxproj  NaoCmakeBroker.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dependencies.cmake  qtcsettings.cmake
build-myconfig/.cmake/api/v1/reply.prev/: directory-.-Debug-1643243eb201e09a60e4.json  index-2023-01-05T09-06-44-0187.json  target-NAO-Debug-dd270fdf34083b8525ec.json  target-NAO-MinSizeRel-556024be9ede77120d72.json  target-NaoCmakeBroker-MinSizeRel-84c77179482c7973735a.json  target-NaoCmakeBroker-RelWithDebInfo-d5dfa241b724c28cd85f.json  (+2 more)
build-myconfig/.qtc_clangd/: compile_commands.json
build-myconfig/NAO.dir/Release/NAO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
build-myconfig/NaoCmakeBroker.dir/Release/NaoCmakeBroker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-myconfig/NaoCmakeBroker_autogen/T24IUX3VL4/: qrc_img.cpp
build-myconfig/NaoCmakeBroker_autogen/include_Release/: ui_mainwindow.h
build-myconfig/NaoCmakeBroker_autogen/include_Release/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-myconfig/Release/: NAO.lib
build-myconfig/sdk/share/qi/: path.conf
img/: img.qrc
(+1728 files in other folders)
